src/test/deca/context/valid/Objet/This-MethodRecursive.deca
// Description:
//      Using This on a method in parent class
//
// Results:
//      nothing
//
// History:
//      created on 19/1/2022

class A {
    int x;
    void foo() {
    }
}

class B extends A{
    boolean y;
    void init() {
        this.foo();
        this.init();
    }
}

{
}
