src/test/deca/context/invalid/Objet/This-Main.deca
// Description:
//      Using this in main program
//
// Results:
//      Line 15 : Rule (3.43) This does not exist in this scope
//
// History:
//      created on 17/1/2022

class A {
}

{
    int x;
    print(this.x);
}
